# gcn-monitor

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
gcn_monitor/: cli.py  kafka.py  metrics.py
test/: test_kafka.py
