[tool.poetry]
name = "gcn-monitor"
version = "0.1.0"
description = "Monitor connectivity of a Kafka client"
authors = ["Leo Singer <leo.singer@ligo.org>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
click = "^8.1.8"
gcn-kafka = "^0.3.3"
python = "^3.10"
prometheus-client = "^0.21.1"
boto3 = "^1.38.13"
# workaround for: https://github.com/python-poetry/poetry-plugin-export/issues/183
urllib3 = ">=1.25.4,<2.4"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[tool.poetry.scripts]
gcn-monitor = "gcn_monitor.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
