[tool.poetry]
name = "gcn-monitor"
version = "0.1.0"
description = "Monitor connectivity of a Kafka client"
authors = ["Leo Singer <leo.singer@ligo.org>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
click = "^8.3.1"
gcn-kafka = "^0.3.4"
python = "^3.10"
prometheus-client = "^0.23.1"
boto3 = "^1.37.24"
# workaround for: https://github.com/python-poetry/poetry-plugin-export/issues/183
urllib3 = ">=1.25.4,<2.7"
pytest = "^9.0.0"
pytest-cov = "^7.0.0"

[tool.poetry.scripts]
gcn-monitor = "gcn_monitor.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
